--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
-consumer_key=xxxxx
-consumer_secret=xxxxx
-access_token_key=xxxxx
-access_token_secret=xxxxx
+acr_host=XXXXX
+acr_access_key=XXXXX
+acr_access_secret=XXXXX
+youtube_access_token=XXXXX
+twitter_consumer_key=XXXXX
+twitter_consumer_secret=XXXXX
+twitter_access_token_key=XXXXX
+twitter_access_token_secret=XXXXX
