Add ACR Multiple Keys + Multithreading Support

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 acr_host=XXXXX
-acr_access_key=XXXXX
-acr_access_secret=XXXXX
+acr_access_key=XXXXX, YYYYY, ZZZZZ
+acr_access_secret=XXXXX, YYYYY, ZZZZZ
 youtube_access_token=XXXXX
 twitter_consumer_key=XXXXX
 twitter_consumer_secret=XXXXX
