Fix silly bug + Shazam API fallback

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 acr_host=XXXXX
 acr_access_key=XXXXX, YYYYY, ZZZZZ
 acr_access_secret=XXXXX, YYYYY, ZZZZZ
+rapidapi_shazam_key=XXXXX, YYYYY, ZZZZZ (optional)
 youtube_access_token=XXXXX
 twitter_consumer_key=XXXXX
 twitter_consumer_secret=XXXXX
