--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "fluent-ffmpeg": "^2.1.2",
     "twitter": "^1.7.1",
     "youtube-api-v3-search": "^1.2.1"
   },
