--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ twitter_consumer_key=XXXXX
 twitter_consumer_secret=XXXXX
 twitter_access_token_key=XXXXX
 twitter_access_token_secret=XXXXX
+stopRetrying=false
