--- a/.env
+++ b/.env
@@ -1,10 +1,3 @@
-acr_host=XXXXX
-acr_access_key=XXXXX, YYYYY, ZZZZZ
-acr_access_secret=XXXXX, YYYYY, ZZZZZ
-rapidapi_shazam_key=XXXXX, YYYYY, ZZZZZ (optional)
-youtube_access_token=XXXXX
-twitter_consumer_key=XXXXX
-twitter_consumer_secret=XXXXX
-twitter_access_token_key=XXXXX
-twitter_access_token_secret=XXXXX
-stopRetrying=false
+mentioning=@nomemusica
+databaseuri=mongodb+srv://AAA:BBB@CCC.DDD.mongodb.net/example
+backendpass=example
