--- a/package.json
+++ b/package.json
@@ -1,20 +1,26 @@
 {
   "name": "tweet-music-recognizer",
-  "version": "1.1.0",
+  "version": "1.3.0",
   "description": "Bot para identificar músicas de tweets",
   "main": "app.js",
   "dependencies": {
     "acrcloud": "^1.4.0",
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.1.3",
     "fluent-ffmpeg": "^2.1.2",
+    "mongoose": "^5.10.13",
     "twitter": "^1.7.1",
     "youtube-api-v3-search": "^1.2.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^2.0.6"
+  },
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "repository": {
     "type": "git",
