Fix warn messages + Wrong songs replacement

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 mentioning=@nomemusica
 databaseuri=mongodb+srv://AAA:BBB@CCC.DDD.mongodb.net/example
 backendpass=example
+wrongsongs={ "画风风&圈妹 - 万有引力": "Cat Staring At The Sky - Ayasa Piano Cover" }
